objects/R_Team_Room_Member__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for adding Account Team members to Team room</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>R Team Room Members</relationshipLabel>
        <relationshipName>R_Team_Room_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group_Name__c</fullName>
        <description>Used to store the Group name for adding members of a Group</description>
        <label>Public Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted_Team_Room__c</fullName>
        <description>Parent &quot;Restricted Team Room&quot; to which member belongs</description>
        <label>Restricted Team Room</label>
        <referenceTo>Restricted_Team_Room__c</referenceTo>
        <relationshipLabel>R Team Room Members</relationshipLabel>
        <relationshipName>R_Team_Room_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Room_Role_Formula__c</fullName>
        <formula>IF( ISPICKVAL( Team_Room_Role__c , &quot;Owner&quot;) , &quot;Moderator&quot;, TEXT(Team_Room_Role__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Room Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Room_Role__c</fullName>
        <description>This field is used for storing Team Room Role.</description>
        <label>Team Room Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Moderator</fullName>
                </value>
                <value>
                    <fullName>Internal Member</fullName>
                </value>
                <value>
                    <fullName>External Member</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Short_Name__c</fullName>
        <formula>IF((User__r.Profile.Name == $Label.CustomerPortalAdmin || User__r.Profile.Name == $Label.EnablementPartnerPortalAdmin || User__r.Profile.Name == $Label.ResellerPortalAdmin || User__r.Profile.Name == $Label.SupplierPortalAdmin || User__r.Profile.Name == $Label.CustomerPortalProfile || User__r.Profile.Name == $Label.EnablementPartnerPortalProfile || User__r.Profile.Name == $Label.ResellerPortalProfile ||User__r.Profile.Name == $Label.SupplierPortalProfile||User__r.Profile.Name == $Label.Overage_Custom_Label|| User__r.Profile.Name == $Label.Overage_Customer_Portal_Profile ||User__r.Profile.Name == $Label.Overage_Enablement_Partner_Portal_Admin ||User__r.Profile.Name == $Label.Overage_Enablement_Partner_Portal_Profile ||User__r.Profile.Name == $Label.Overage_Reseller_Portal_Admin ||User__r.Profile.Name == $Label.Overage_Reseller_Portal_Profile ||User__r.Profile.Name == $Label.Overage_Supplier_Portal_Admin ||User__r.Profile.Name == $Label.Overage_Supplier_Portal_Profile ) , User__r.Contact.Login_Id__c , User__r.HCM_Login_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R_Team_Room_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>R Team Room Member</label>
    <nameField>
        <displayFormat>TRM-{0000000000}</displayFormat>
        <label>R Team Room Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>R Team Room Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>R_ExternalUserRestriction</fullName>
        <active>true</active>
        <description>Used for restricting addition of portal users to internal team rooms.</description>
        <errorConditionFormula>AND(( 
User__r.Profile.Name =&apos;Customer Portal Admin&apos; || 
User__r.Profile.Name =&apos;Customer Portal Profile&apos;|| 
User__r.Profile.Name =&apos;Enablement Partner Portal Admin&apos;|| 
User__r.Profile.Name =&apos;Enablement Partner Portal Profile&apos;|| 
User__r.Profile.Name =&apos;Reseller Portal Admin&apos; || 
User__r.Profile.Name =&apos;Reseller Portal Profile&apos;|| 
User__r.Profile.Name =&apos;Supplier Portal Admin&apos; || 
User__r.Profile.Name =&apos;Supplier Portal Profile&apos; || 
User__r.Profile.Name =&apos;Overage Customer Portal Admin&apos; || 
User__r.Profile.Name =&apos;Overage Customer Portal Profile&apos;|| 
User__r.Profile.Name =&apos;Overage Enablement Partner Portal Admin&apos;|| 
User__r.Profile.Name =&apos;Overage Enablement Partner Portal Profile&apos;|| 
User__r.Profile.Name =&apos;Overage Reseller Portal Admin&apos; || 
User__r.Profile.Name =&apos;Overage Reseller Portal Profile&apos;|| 
User__r.Profile.Name =&apos;Overage Supplier Portal Admin&apos; || 
User__r.Profile.Name =&apos;Overage Supplier Portal Profile&apos; 
),  Restricted_Team_Room__r.RecordType.DeveloperName = &apos;GLOBALFOUNDRIES_Internal&apos; )</errorConditionFormula>
        <errorMessage>Internal Team Rooms can not be associated with Portal users.</errorMessage>
    </validationRules>
</CustomObject>